 650.	[bug]		SIG(0) records were being generated and verified
			incorrectly. [RT #606]

 649.	[bug]		It was possible to join to an already running fctx
			after it had "cloned" its events, but before it sent
			them.  In this case, the event of the newly joined
			fetch would not contain the answer, and would
			trigger the INSIST() in fctx_sendevents().  In
			BIND 9.0, this bug did not trigger an INSIST(), but
			caused the fetch to fail with a SERVFAIL result.
			[RT #588, #597, #605, #607]

 648.	[port]		Add support for pre-RFC2133 IPv6 implementations.

 647.	[bug]		Resolver queries sent after following multiple
			referrals had excessively long retransmission
			timeouts due to incorrectly counting the referrals
			as "restarts".

 646.	[bug]		The UnixWare ISC_PLATFORM_FIXIN6INADDR fix in isc/net.h
			didn't _cleanly_ fix the problem it was trying to fix.

 645.	[port]		BSD/OS 3.0 needs pthread_init(). [RT #603]

 644.	[bug]		#622 needed more work. [RT #562]

 643.	[bug]		xfrin error messages made more verbose, added class
			of the zone.  [RT# 599]

 642.	[bug]		Break the exit_check() race in the zone module.
			[RT #598]

	--- 9.1.0b2 released ---

 641.	[bug]		$GENERATE caused a uninitialized link to be used.
			[RT #595]

 640.	[bug]		Memory leak in error path could cause
			"mpctx->allocated == 0" failure. [RT #584]

 639.	[bug]		Reading entropy from the keyboard would sometimes fail.
			[RT #591]

 638.	[port]		lib/isc/random.c needed to explicitly include time.h
			to get a prototype for time() when pthreads was not
			being used. [RT #592]

 637.	[port]		Use isc_u?int64_t instead of (unsigned) long long in
			lib/isc/print.c.  Also allow lib/isc/print.c to
			be compiled even if the platform does not need it.
			[RT #592]

 636.	[port]		Shut up MSVC++ about a possible loss of precision
			in the ISC__BUFFER_PUTUINT*() macros. [RT #592]

 635.	[bug]		Reloading a server with a configured blackhole list
			would cause an assertion. [RT #590]
