@@ -1,3 +1,6 @@
+ 651.	[func]		The AD bit in responses now has the meaning
+			specified in <draft-ietf-dnsext-ad-is-secure>.
+
  650.	[bug]		SIG(0) records were being generated and verified
 			incorrectly. [RT #606]
 
